--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,12 @@
+header{
+  height: 200px;
+  width: 100%;
+  background-color:rgba(32,251,255,0.8);
+}
 
+footer{
+  height: 400px;
+  width: 100%;
+  background-color:rgba(238,137,54,1);
+  bottom: 0; /*下に固定*/
+}
