--- a/ojigiSteve/ojigiSteve.css
+++ b/ojigiSteve/ojigiSteve.css
@@ -1,6 +1,9 @@
-#image-input {
-	margin: 10px auto;
+h2 {
+	margin-bottom: 0px;
+}
 
+p {
+	margin-top: 0px;
 }
 
 .image-container {
@@ -8,15 +11,32 @@
 	justify-content: center;
 }
 
+.content-left {
+	margin-right: 5px;
+	flex-basis: 46%;
+}
+
+#image-input {
+	margin: 1px auto;
+
+}
 
 #image-preview {
 	display: block;
-	width: 40%;
+	width: 100%;
 	height: auto;
 	border: 1px solid red;
 	image-rendering: pixelated;
-	align-self: flex-start;
-	margin-right: 5px;
+}
+
+.content-right {
+	flex-basis: 46%;
+}
+
+.content-right p {
+	text-align: center;
+	margin-bottom: 2px;
+	font-size: large;
 }
 
 #download-a {
@@ -25,8 +45,7 @@
 
 #raster {
 	display: block;
-	width: 60%;
+	width: 100%;
 	background-color: white;
 	border: 1px solid red;
-	align-self: flex-start;
 }
